--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
           <div class="span4 well">
             <h3>Paso 3<br/>
               <small>
-              Pegá la URL de tu spreadsheet
+              Pegá la URL pública de tu spreadsheet
             </small>
             </h3>          
             <p>
@@ -331,7 +331,7 @@
                 <!-- Embed Source-->
                 <!-- Embed Optional-->
                 <div class="control-group">
-                  <label for="embed-source-url" class="control-label"><strong>URL de tu Google Spreadsheet</strong></label>
+                  <label for="embed-source-url" class="control-label"><strong>URL pública de tu Google Spreadsheet</strong></label>
                   <div class="controls">
                     <input type="text" id="embed-source-url">
                     <p class="help-inline"><em>Asegurate de haberla publicado.</em></p>
