--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <ul>
               <li>ArgenWamp es altamente disponible porque está hosteado en <a href="http://pages.github.com/" target="_blank">GitHub Pages</a>.</li>
               <li>El código de argenWAMP está en la branch <code>master</code> del repo <a href="http://github.com/oskosk/argenwamp">http://github.com/oskosk/argenwamp</a>.
-              <li>La versión <abbr="Este sitio en el que estás ahora">live</live>, osea el sitio <code>argenwamp.com.ar</code> está en la branch <code>gh-pages</code> del mismo repo y ahí es donde aparece la magia de GitHub y mantiene esa página siempre online por el resto de la eternidad.</li>
+              <li>La versión <abbr title="Este sitio en el que estás ahora">live</live>, osea el sitio <code>argenwamp.com.ar</code> está en la branch <code>gh-pages</code> del mismo repo y ahí es donde aparece la magia de GitHub y mantiene esa página siempre online por el resto de la eternidad.</li>
               <li>La estabilidad del mapa depende de la estabilidad de la librería <a target="_blank" href="http://ign.gob.ar/argenmap">argenmap.jquery</a>, que es un servicio WEB del IGN.</li>
 
             </ul>
