--- a/index.html
+++ b/index.html
@@ -107,25 +107,6 @@
       </div>    
     <header class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
 
-    <div class="row-fluid">
-      <div class="span12">
-        <!-- Place this tag where you want the share button to render. -->
-        <div style="float:right">
-          <div class="g-plus" data-action="share" data-width="200" data-height="24"></div>
-
-          <!-- Place this tag after the last share tag. -->
-          <script type="text/javascript">
-            window.___gcfg = {lang: 'es-419'};
-
-            (function() {
-              var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-              po.src = 'https://apis.google.com/js/plusone.js';
-              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-            })();
-          </script>
-        </div>
-      </div>
-    </div>
       <div class="container-fluid text-center">
         <h1>Argen<span class="Vis">WAMP</span><br/></h1>
         <h2><span class="wamp hidden-tablet hidden-phone">Web Anamorphic Maps Player</span><br/>
@@ -182,7 +163,7 @@
             <ul>
               <li>ArgenWamp es altamente disponible porque está hosteado en <a href="http://pages.github.com/" target="_blank">GitHub Pages</a>.</li>
               <li>El código de argenWAMP está en la branch <code>master</code> del repo <a href="http://github.com/oskosk/argenwamp">http://github.com/oskosk/argenwamp</a>.
-              <li>La versión <abbr title="Este sitio en el que estás ahora">live</live>, osea el sitio <code>argenwamp.com.ar</code> está en la branch <code>gh-pages</code> del mismo repo y ahí es donde aparece la magia de GitHub y mantiene esa página siempre online por el resto de la eternidad.</li>
+              <li>La versión <abbr title="Este sitio en el que estás ahora">live</abbr>, osea el sitio <code>argenwamp.com.ar</code> está en la branch <code>gh-pages</code> del mismo repo y ahí es donde aparece la magia de GitHub y mantiene esa página siempre online por el resto de la eternidad.</li>
               <li>La estabilidad del mapa depende de la estabilidad de la librería <a target="_blank" href="http://ign.gob.ar/argenmap">argenmap.jquery</a>, que es un servicio WEB del IGN.</li>
 
             </ul>
@@ -371,7 +352,27 @@
       <section style="display:none" id="preview-embed">
         <div class="page-header">
           <h2>Previsualización</h2>
-        </div>        
+        </div>       
+
+    <div class="row-fluid">
+      <div class="span12">
+        <!-- Place this tag where you want the share button to render. -->
+        <div style="float:right">
+          <div class="g-plus" data-action="share" data-width="200" data-height="24"></div>
+
+          <!-- Place this tag after the last share tag. -->
+          <script type="text/javascript">
+            window.___gcfg = {lang: 'es-419'};
+
+            (function() {
+              var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+              po.src = 'https://apis.google.com/js/plusone.js';
+              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+            })();
+          </script>
+        </div>
+      </div>
+    </div>         
         <div class="row-fluid" >
           <div class="span12" >
             <div id="preview">
