--- a/iframe.html
+++ b/iframe.html
@@ -103,6 +103,13 @@
         box-shadow:none !important;
       }
 
+      #mapa .argenmapMapFooter {
+        height:0px !important;
+        min-height:0px !important;
+        padding:0px !important;
+        overflow: hidden !important;
+      }
+
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
