cambie url de spin.min.js porque vario en el sitio original

--- a/iframe.html
+++ b/iframe.html
@@ -127,7 +127,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/sugar/1.3.9/sugar.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>  
   <script type="text/javascript" src="argenmapvis.jquery.js"></script>    
-  <script type="text/javascript" src="http://fgnass.github.io/spin.js/dist/spin.min.js"></script>        
+  <script type="text/javascript" src="http://fgnass.github.io/spin.js/spin.min.js"></script>        
   <script type="text/javascript" src="http://fgnass.github.io/spin.js/jquery.spin.js"></script>          
   
     
