--- a/iframe.html
+++ b/iframe.html
@@ -120,14 +120,14 @@
   
   
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-  <script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/markerclusterer/src/markerclusterer_compiled.js"></script>
+  <script type="text/javascript" src="assets/js/markerclusterer_compiled.js"></script>
   <script type="text/javascript" src="http://static.ign.gob.ar/dist/argenmap.jquery.min.js"></script>
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/sugar/1.3.9/sugar.min.js"></script>
-  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>  
+  <script src="assets/js/sugar.min.js"></script>
+  <script type="text/javascript" src="assets/js/purl.min.js"></script>  
   <script type="text/javascript" src="argenmapvis.jquery.js"></script>    
-  <script type="text/javascript" src="http://fgnass.github.io/spin.js/spin.min.js"></script>        
-  <script type="text/javascript" src="http://fgnass.github.io/spin.js/jquery.spin.js"></script>          
+  <script type="text/javascript" src="assets/js/spin.min.js"></script>        
+  <script type="text/javascript" src="assets/js/jquery.spin.js"></script>          
   
     
   <script type="text/javascript">
